# SteamCAD

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  compile32.bat  compile64.bat  configure  configure.ac  makefile.gcc  makefile.mingw
Images/: Makefile.am  Makefile.in  SteamCAD_ico.sdr  steamcad.desktop.in
Linux/: DApplication.cpp  DApplication.cpp~  DApplication.hpp  DApplication.hpp~  DDimEditDlg.cpp  DDimEditDlg.cpp~  DDimEditDlg.hpp  DDimEditDlg.hpp~  DEditMenu.cpp  DEditMenu.cpp~  DEditMenu.hpp  DFileMenu.cpp  DFileMenu.cpp~  DFileMenu.hpp  DFileMenu.hpp~  DFileSetupDlg.cpp  DFileSetupDlg.hpp  DFileSetupDlg.hpp~  DLineStyleDlg.cpp  DLineStyleDlg.cpp~  DLineStyleDlg.hpp  DLineStyleDlg.hpp~  DLxBaseDefs.h  DLxBaseDefs.h~  DMenu.cpp  DMenu.cpp~  DMenu.hpp  DMenu.hpp~  DModeMenu.cpp  DModeMenu.cpp~  DModeMenu.hpp  DModeMenu.hpp~  DScaleDlg.cpp  DScaleDlg.cpp~  DScaleDlg.hpp  DScaleDlg.hpp~  DSnapDlg.cpp  DSnapDlg.cpp~  DSnapDlg.hpp  DSnapDlg.hpp~  (+16 more)
Linux/po/: SteamCAD.pot
Manual/: SteamCAD.tex
Manual/Images/: 264_0.eps  Conflicts.eps  Conflicts.sdr  SR_class_S15.eps
Manual/Source/: Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Introduction.tex
Papers/: DPapers.ini  DUnits.ini  Makefile.am  Makefile.in
Samples/: 264_0.sdr  SR_class_S15.sdr
Source/: DArcElps.cpp  DArcElps.cpp~  DArcElps.hpp  DArcElps.hpp~  DBaseDefs.hpp  DCircle.cpp  DCircle.cpp~  DCircle.hpp  DCircle.hpp~  DDataTypes.cpp  DDataTypes.cpp~  DDataTypes.hpp  DDataTypes.hpp~  DDrawTypes.cpp  DDrawTypes.cpp~  DDrawTypes.hpp  DDrawTypes.hpp~  DEllipse.cpp  DEllipse.cpp~  DEllipse.hpp  DEllipse.hpp~  DEvolv.cpp  DEvolv.cpp~  DEvolv.hpp  DEvolv.hpp~  DExpCairo.cpp  DExpCairo.cpp~  DExpCairo.hpp  DExpDXF.cpp  DExpDXF.cpp~  DExpDXF.hpp  DExpDXF.hpp~  DHyper.cpp  DHyper.cpp~  DHyper.hpp  DHyper.hpp~  DLine.cpp  DLine.cpp~  DLine.hpp  DLine.hpp~  (+24 more)
Win32/: DDimEditDlg.cpp  DDimEditDlg.hpp  DFileSetupDlg.cpp  DFileSetupDlg.hpp  DLineStyleDlg.cpp  DLineStyleDlg.hpp  DScaleDlg.cpp  DScaleDlg.hpp  DSnapDlg.cpp  DSnapDlg.hpp  DStatDlg.cpp  DStatDlg.hpp  DToolBar.cpp  DToolBar.hpp  MainWnd.cpp  MainWnd.hpp  SteamCAD.cpp  SteamCAD.exe.manifest.32  SteamCAD.exe.manifest.64  SteamCAD.rc  SteamCAD.rc~  SteamCAD.rh  XMLUtils.cpp  XMLUtils.hpp
cairo/: cairo.def
cairo/src/: cairo-features.h
docs/: BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  TRANSLATIONS.md
dxflib/: Makefile.am  Makefile.in  dl_dxf.cpp  dl_dxf.cpp~  dl_dxf.h  dl_writer_ascii.cpp  dl_writer_ascii.h
po/: Makefile.am  Makefile.in  SteamCAD.pot
po/cs/LC_MESSAGES/: SteamCAD.po  steamcad.mo
